# hw2-graphics

./: CMakeLists.txt  Geometry.h  Makefile  Transform.cpp  Transform.h  display.cpp  main.cpp  readfile.cpp  test.txt  variables.h
glm-0.9.7.1/glm/gtc/: matrix_transform.inl
shaders/: light.frag.glsl  light.vert.glsl
